# MetalioClaw4

./: .gitignore  README.md  README_en.md  README_zn.md  merge_firmware.sh  sdkconfig
.cursor/skills/append-local-changes/: SKILL.md
.cursor/skills/i18n-ui-strings/: SKILL.md
.cursor/skills/update-changelog/: SKILL.md
.github/workflows/: build.yml  release.yml
docs/: product-wiki.md
esp_claw_bin/: README.md
main/: CMakeLists.txt  api_endpoints.h  application.cc  application.h  idf_component.yml  main.cc
main/boards/common/: cx25601n.cc  cx25601n.h  nt26_board.cc  wifi_board.cc
main/boards/metalio-claw-4/: config.json  metalio-claw-4.cc
main/display/: lv_adapter_display.cc  theme_manager.h
main/display/font/: font_puhui_number_120_4.c
main/display/lvgl_display/jpg/: image_to_jpeg.cpp  image_to_jpeg.h
main/display/screen/: idle_power_policy.cc  idle_power_policy.h  pwr_key_handler.cc  pwr_key_handler.h  screen_util.cc  screen_util.h
main/display/screen/ai_image_gen_screen/: ai_image_gen_screen.cc  ai_image_gen_screen.h
main/display/screen/backlight_screen/: backlight_screen.cc
main/display/screen/bluetooth_screen/: bluetooth_screen.cc  bluetooth_screen.h
main/display/screen/boot_screen/: boot_screen.cc
main/display/screen/calculator_screen/: calculator_screen.cc
main/display/screen/calendar_screen/: calendar_screen.cc
main/display/screen/call_screen/: call_screen.cc  call_screen.h
main/display/screen/camera_screen/: camera_screen.cc  camera_screen.h
main/display/screen/chat_screen/: chat_screen.cc  chat_screen.h
main/display/screen/digital_people_screen/: digital_people_screen.cc  digital_people_screen.h
main/display/screen/game_2048_screen/: game_2048_screen.cc
main/display/screen/gps_screen/: gps_screen.cc
main/display/screen/home_screen/: home_screen.cc  home_screen.h
main/display/screen/info_screen/: info_screen.cc
main/display/screen/level_screen/: level_screen.cc
main/display/screen/magnet_screen/: magnet_screen.cc
main/display/screen/music_screen/: music_screen.cc  music_screen.h
main/display/screen/network_screen/: network_screen.cc
main/display/screen/openclaw_screen/: openclaw_screen.cc  openclaw_screen.h
main/display/screen/ota_screen/: ota_screen.cc
main/display/screen/pin_test_screen/: pin_test_screen.cc
main/display/screen/radio_screen/: radio_screen.cc  radio_screen.h  radio_stations.h
main/display/screen/recording_screen/: recording_screen.cc  recording_screen.h
main/display/screen/sd_card_screen/: sd_card_screen.cc  sd_card_screen.h
main/display/screen/settings_screen/: settings_screen.cc  settings_screen.h
main/display/screen/standby_screen/: standby_screen.cc  standby_screen.h
main/display/screen/test_screen/: audio_test.cc  auto_test_screen.cc  auto_test_screen.h  bq27220_test.cc  bq27220_test.h  camera_test.cc  camera_test.h  cell_4g_test.cc  gps_test.cc  nu1680_test.cc  nu1680_test.h  pin_gpio_test.cc  pin_gpio_test.h  qmc6309_test.cc  sc7a20h_test.cc  sd_card_test.cc  stress_demo.c  stress_demo.h  stress_test_screen.cc  stress_test_screen.h  test_screen.cc  test_screen.h  test_ui_common.cc  test_ui_common.h  vibrate_motor_test.cc  vibrate_motor_test.h  wifi_test.cc  wifi_test.h
main/display/screen/theme_screen/: theme_screen.cc  theme_screen.h
main/display/screen/translate_screen/: sinicloud_lang_table.inc  translate_screen.cc  translate_screen.h
main/display/screen/vibrate_screen/: vibrate_screen.cc
main/display/screen/weather_screen/: weather_screen.cc
main/i18n/: catalog.json  i18n.cc  i18n.h  i18n_strings_gen.h
partitions/v1/: 32m.csv  32m_dual.csv
scripts/: gen_i18n.py  release.py
sd_images/system/chat/: angry.eaf  confident.eaf  confused.eaf  cool.eaf  crying.eaf  delicious.eaf  funny.eaf  happy.eaf  kissy.eaf  laughing.eaf  neutral.eaf  relaxed.eaf  sad.eaf  shocked.eaf  silly.eaf  sleepy.eaf  surprised.eaf  thinking.eaf  winking.eaf
